<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreeShisen</string>
    <string name="newgame">New Game</string>
    <string name="hint">Hint</string>
    <string name="undo">Undo</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="aboutText">\n
&#169; 2013 knilch - freeshisen@cwde.de\n
Most of the gameplay code and application structure taken from ShisenSho:\n
&#169; 2013 contact.proofofconcept@gmail.com\n
Images taken from kshisen (Shisen Sho 1.5.1), from the package kdegames:\n
&#169; 1997 Mario Weilguni\n
Other tilesets from libkmahjongg:
&#169; Eugene Trounev, James L. Hammons, Robert Buchholz
Distributed under GPL v2:\n
http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt\n
Get the source code: https://code.google.com/p/freeshisen/</string>
    <string name="size">Size</string>
    <string name="tileset">Tileset</string>
    <string name="tileset_default">classic</string>
    <string name="difficulty">Difficulty</string>
    <string name="size_default">2</string>
    <string name="difficulty_default">1</string>
    <string name="time_counter">Time Counter</string>
    <string name="gravity">Gravity</string>
    <string name="gravity_pref_on">Gravity is active.</string>
    <string name="gravity_pref_off">Gravity disabled.</string>
    <string name="time_pref_on">Time Counter is active.</string>
    <string name="time_pref_off">Time Counter disabled.</string>
    <string name="besttimes">Fastest Times</string>
    <string name="diff_hard">Difficulty: Hard</string>
    <string name="diff_easy">Difficulty: Easy</string>
    <string name="reset_hiscore">Clear Times</string>
    <string name="reset_hiscore_hint">Clears all saved times</string>
    <string name="hiscore_large1">"Large: 1st "</string>
    <string name="hiscore_2nd">", 2nd "</string>
    <string name="hiscore_medium1st">"Medium: 1st "</string>
    <string name="hiscore_small1">"Small: 1st "</string>
    <string name="invalidtime">9:99:99</string>
    <string name="clearhiscore_confirm_title">Really clear best times?</string>
    <string name="clearhiscore_confirm_text">This will clear all saved times. Hit &quot;OK&quot; if you really want to do this.</string>
    <string name="prefchange_confirm_title">Preferences changed!</string>
    <string name="prefchange_confirm_text">Some changes in Preferences will only have an effect if a new game is started.</string>
    <string name="hiscore_title">Hiscore!</string>
    <string name="hiscore_text">You\'ve made the highscore list!</string>
    <string name="sound_pref_on">Sound Effects are enabled.</string>
    <string name="sound_pref_off">Sound effects are disabled.</string>
    <string name="sound_effects">Sound Effects</string>

</resources>